SE AGREGO LISTAR PRODUCTOS

--- a/Woo-ChapinFront/src/app/components/general/home/home.component.html
+++ b/Woo-ChapinFront/src/app/components/general/home/home.component.html
@@ -36,7 +36,7 @@
                         <div class="card-footer">
                           <div class="wcf-left"><span class="price">Q. {{product.precio}}</span></div>
                             <div class="wcf-right d-flex">
-                                <a  class="buy-btn mr-1"><i class="fa fa-eye"></i></a>
+                                <a routerLink="../../product/{{product._id}}"   class="buy-btn mr-1"><i class="fa fa-eye"></i></a>
                               <a  class="buy-btn"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
                         <div class="card-footer">
                           <div class="wcf-left"><span class="price">Q. {{product.precio}}</span></div>
                             <div class="wcf-right d-flex">
-                                <a  class="buy-btn mr-1"><i class="fa fa-eye"></i></a>
+                                <a routerLink="../../product/{{product._id}}"   class="buy-btn mr-1"><i class="fa fa-eye"></i></a>
                                 <a  class="buy-btn"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
