--- a/Woo-ChapinFront/src/app/components/general/MiCuenta/mis-direcciones/mis-direcciones.component.html
+++ b/Woo-ChapinFront/src/app/components/general/MiCuenta/mis-direcciones/mis-direcciones.component.html
@@ -4,7 +4,7 @@
     <div class="container pb-3 pl-0 pr-0  w-100">
         <app-sidebar></app-sidebar>
         <div class="w-100 row justify-content-center mt-3">
-            <div class="shadow col-lg-9 pt-2 pb-2">
+            <div *ngIf="direccioness != null" class="shadow col-lg-9 pt-2 pb-2">
                 <div class="w-100 row">
                     <div class="col-lg-6">
                         <h2>Direcciones</h2>
