Eliminar direcciones y home admin

--- a/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.html
+++ b/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.html
@@ -9,13 +9,13 @@
             </div>
             <div class="col-lg-4" >
                 <div class="w-100 shadow h-100 text-center p-3" style="background-color: #1266F1 ;">
-                    <h2>150</h2>
+                    <h2>{{numberFac}}</h2>
                     <span>Pedidos Realizados</span>
                 </div>
             </div>
-            <div class="col-lg-4" >
+            <div class="col-lg-4">
                 <div class="w-100 shadow h-100 text-center p-3" style="background-color: #1266F1;">
-                    <h2>150</h2>
+                    <h2>{{numberUser}}</h2>
                     <span>Usuarios</span>
                 </div>
             </div>
