--- a/Woo-ChapinFront/src/app/components/general/MiCuenta/mis-direcciones/mis-direcciones.component.html
+++ b/Woo-ChapinFront/src/app/components/general/MiCuenta/mis-direcciones/mis-direcciones.component.html
@@ -16,8 +16,8 @@
                         <textarea readonly class="form-control">{{optionDirecciones.direccion}}</textarea>
                     </div>
                     <div class="col-lg-6">
-                        <button type="button" data-toggle="modal" data-target="#modalEdit" class="btn btn-primary mr-1"><i class="fa fa-edit"></i></button>
-                        <button type="button" data-toggle="modal" data-target="#modalDelete" class="btn btn-danger mr-1"><i class="fa fa-trash"></i></button>
+                        <button type="button" data-toggle="modal" data-target="#modalEdit" (click)="selectDireccion(optionDirecciones)" class="btn btn-primary mr-1"><i class="fa fa-edit"></i></button>
+                        <button type="button" data-toggle="modal" data-target="#modalDelete" (click)="selectDireccion(optionDirecciones)" class="btn btn-danger mr-1"><i class="fa fa-trash"></i></button>
                     </div>
                     <div class="col-lg-12">
                         <hr>
@@ -44,8 +44,8 @@
         <div class="modal-body">
           <form  id="stripe-login">
             <div class="field padding-bottom--24">
-                <label for="direccion">Direccion:</label>
-                <input type="text" name="direccion" id="direccion">
+                <label for="direccionn">Direccion:</label>
+                <input required type="text"  #direccionn="ngModel" [(ngModel)]="direccioness.direccion" name="direccionn" id="direccionn">
             </div>
           </form>
         </div>
@@ -72,7 +72,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-danger">Eliminar</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" (click)="removeAddress()">Eliminar</button>
         </div>
       </div>
     </div>
