--- a/Woo-ChapinFront/src/app/components/general/carrito/carrito.component.css
+++ b/Woo-ChapinFront/src/app/components/general/carrito/carrito.component.css
@@ -268,3 +268,8 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   -ms-transform: scale(0.95);
   transform: scale(0.95);
 }
+
+button{
+  color: white;
+  font-weight: bolder;
+}
