--- a/Woo-ChapinFront/src/app/components/general/home/home.component.html
+++ b/Woo-ChapinFront/src/app/components/general/home/home.component.html
@@ -37,7 +37,7 @@
                           <div class="wcf-left"><span class="price">Q. {{product.precio}}</span></div>
                             <div class="wcf-right d-flex">
                                 <a routerLink="../../product/{{product._id}}"   class="buy-btn mr-1"><i class="fa fa-eye"></i></a>
-                              <a  class="buy-btn"><i class="fa fa-cart-plus"></i></a>
+                              <a (click)="addCart(product._id)"  class="buy-btn"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                       </div>
@@ -69,7 +69,7 @@
                           <div class="wcf-left"><span class="price">Q. {{product.precio}}</span></div>
                             <div class="wcf-right d-flex">
                                 <a routerLink="../../product/{{product._id}}"   class="buy-btn mr-1"><i class="fa fa-eye"></i></a>
-                                <a  class="buy-btn"><i class="fa fa-cart-plus"></i></a>
+                                <a  (click)="addCart(product._id)" class="buy-btn"><i class="fa fa-cart-plus"></i></a>
                             </div>
                         </div>
                       </div>
