Auto stash before merge of "Diego-Gonzalez" and "origin/Diego-Gonzalez"

--- a/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.html
+++ b/Woo-ChapinFront/src/app/components/admin/home-admin/home-admin.component.html
@@ -3,7 +3,7 @@
         <div class="w-100 row">
             <div class="col-lg-4">
                 <div class="w-100 shadow h-100 text-center p-3" style="background-color: #00B74A;">
-                    <h2>150.00</h2>
+                    <h2>{{tVendido}}</h2>
                     <span>Total en Ventas</span>
                 </div>
             </div>
